# Lbm-weather-simulator-

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
benchmarks/: benchmark_lbm.cpp
docs/: Doxyfile.in  GPS_LBM_weather_guide.md
include/: atmospheric_lbm.hpp  boundary_conditions.hpp  common.hpp  opencl_weather.hpp  terrain_manager.hpp  tornado_simulator.hpp  visualization.hpp  weather_data.hpp
kernels/: kernel.cl  weather_kernels.cl
scripts/: fetch_weather.py  run_simulation.py  visualize_results.py
src/: atmospheric_lbm.cpp  atmospheric_lbm_enhanced.cpp  boundary_conditions.cpp  coordinate_transform.py  forecast_main.cpp  lbm_core.py  main.cpp  opencl_main.cpp  opencl_weather.cpp  terrain_manager.cpp  tornado_simulator.cpp  visualization.cpp  weather_data.cpp
tests/: test_lbm.cpp  test_tornado.cpp
